Check Auth and ACL